Updated checkout form. Corrected a spacing error on form label

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -36,6 +36,10 @@
     border: 1px solid #000;
 }
 
+select:invalid {
+    color: #aab7c4 !important;
+}
+
 #loading-overlay {
     display: none;
     position: fixed;
